Terraform/AWS/EC2_PROV.tf
variable "sg_name" {
  type     = string
}

variable "server_Name" {
  type     = string
}

variable "awsprops" {
    type = map
    default = {
      region = "us-east-1"
      vpc = "vpc-e378089e"
      itype = "t2.micro"
      subnet = "subnet-0896619b1593d6db7"
      publicip = false
      keyname = "jenkins"
      secgroupname="secgroup"
      ami="ami-0b0af3577fe5e3532"
      count=1
  }
}

provider "aws" {
  region = lookup(var.awsprops, "region")
}

resource "aws_security_group" "project-iac-sg" {
  #name = lookup(var.awsprops, "secgroupname")
  name = var.sg_name
  description = lookup(var.awsprops, "secgroupname")
  vpc_id = lookup(var.awsprops, "vpc")

  // To Allow SSH Transport
  ingress {
    from_port = 22
    protocol = "tcp"
    to_port = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  // To Allow Port 80 Transport
  ingress {
    from_port = 80
    protocol = "tcp"
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
  }  
  ingress {
    from_port = 8080
    protocol = "tcp"
    to_port = 8080
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_instance" "project-iac" {
  ami = lookup(var.awsprops, "ami")
  instance_type = lookup(var.awsprops, "itype")
  subnet_id = lookup(var.awsprops, "subnet") #FFXsubnet2
  associate_public_ip_address = lookup(var.awsprops, "publicip")
  key_name = lookup(var.awsprops, "keyname")
  count= lookup(var.awsprops,"count")


  vpc_security_group_ids = [
    aws_security_group.project-iac-sg.id
  ]

  tags = {
    Name =var.server_Name
    Environment = "DEV"
    OS = "UBUNTU"
    Managed = "IAC"
  }

  depends_on = [ aws_security_group.project-iac-sg ]
}

#output "ec2instance" {
  #value = aws_instance.project-iac.private_ip
#}
